[package]
name = "rust_examples"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1"
actix-web = "4.1.0"
clap = { version = "3.2.17", features = ["derive"] }
comfy-table = "6.0.0"
sqlparser = "0.21.0"
